add dms-viz json, update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -65,4 +65,6 @@ results/receptor_affinity/averages/*
 !results/receptor_affinity/averages/*_mut_effect.csv
 !results/receptor_affinity/averages/*_mut_icXX.csv
 
-!results/dms-viz
+!results/dms_viz
+results/dms_viz/*
+!results/dms_viz/*.json
