--- a/data/PacBio_feature_parse_specs.yaml
+++ b/data/PacBio_feature_parse_specs.yaml
@@ -21,6 +21,11 @@ PacBio_amplicon:
       mutation_nt_count: 0
       mutation_op_count: null
     return: [sequence, accuracy]
+  gene_flank3:
+    filter:
+      clip5: 0
+      mutation_nt_count: 0
+      mutation_op_count: null
   termini3:
     filter:
       clip3: 12
