--- a/data/summaries_config.yml
+++ b/data/summaries_config.yml
@@ -6,7 +6,7 @@
 # --------------------------------------------------------------------------------------
 
 summary:
-  min_times_seen: 3  # only include mutations with times_seen >= this
+  min_times_seen: 2  # only include mutations with times_seen >= this
   min_frac_models: 1  # only include mutations in >= this fraction of models
   alphabet: [A, C, D, E, F, G, H, I, K, L, M, N, P, Q, R, S, T, V, W, Y, -]  # amino acids to include
   init_floor_escape_at_zero: true  # initially floor site escape to be >= 0?
@@ -24,6 +24,8 @@ summary:
         RVC20: RVC20
         RVA122: RVA122
         17C7: 17C7
+        RVC58: RVC58
+        CR4098: CR4098
 
   func_effects:  # effects of mutations on function
     RABV-G mediated entry:  # name of functional selection
