Update dms-vep-pipeline-3 to 3.8.0 and add preliminary natural sequence analysis

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,8 @@ results/receptor_affinity/averages/*
 !results/dms_viz
 results/dms_viz/*
 !results/dms_viz/*.json
+
+!non-pipeline_analyses/RABV_nextstrain/Results/
+non-pipeline_analyses/RABV_nextstrain/Results/*
+!non-pipeline_analyses/RABV_nextstrain/Results/Auspice/
+!non-pipeline_analyses/RABV_nextstrain/Results/RABV_G_variation.csv
