--- a/config.yaml
+++ b/config.yaml
@@ -121,3 +121,16 @@ illumina_barcode_parser_params:
 func_effects_config: data/func_effects_config.yml  # Functional effects of mutations
 antibody_escape_config: data/antibody_escape_config.yml  # Antibody/serum escape
 summaries_config: #data/summaries_config.yml  # Summaries across assays
+
+# ----------------------------------------------------------------------------
+# Configuration if you're going to build a custom VitePress Homepage
+# ----------------------------------------------------------------------------
+
+# Everything in this section can be ommitted unless you want to build a VitePress
+# homepage that is nicely styled for the GitHub Pages.
+
+# For details on building a VitePress homepage, see:
+# https://github.com/dms-vep/dms-vep-pipeline-3/blob/add-vitepress-homepage/homepage/README.md
+
+build_vitepress_homepage: false
+# homepage: ../homepage/public # typically will be `homepage/public` for real pipelines
