--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ results/receptor_affinity/averages/*
 !results/receptor_affinity/averages/*_mut_effect.csv
 !results/receptor_affinity/averages/*_mut_icXX.csv
 
+!results/natural_diversity_comparison
+results/natural_diversity_comparison/*
+!results/natural_diversity_comparison/*.html
+
 !results/dms_viz
 results/dms_viz/*
 !results/dms_viz/*.json
