--- a/data/func_effects_config.yml
+++ b/data/func_effects_config.yml
@@ -26,7 +26,7 @@ global_epistasis_params: &global_epistasis_params
   #  - median_stop: median func score of all variants with stop codons
   #  - null: no clipping
   #  - a number: clip at this number
-  clip_lower: median_stop
+  clip_lower: -5
   clip_upper: null
   # Do we collapse barcodes with same variant?
   collapse_identical_variants: false  # {false, mean, median}
@@ -105,7 +105,7 @@ avg_func_effects_default: &avg_func_effects_default
     addtl_slider_stats:
       times_seen: 2
     heatmap_max_at_least: 2
-    heatmap_min_at_least: -6
+    heatmap_min_at_least: -5
     init_floor_at_zero: false
     init_site_statistic: mean
     site_zoom_bar_color_col: region  # supplied in the `site_numbering_map`
@@ -173,7 +173,7 @@ func_effect_shifts_default: &func_effect_shifts_default
   #  - median_stop: median func score of all variants with stop codons
   #  - null: no clipping
   #  - a number: clip at this number
-  clip_lower: median_stop
+  clip_lower: -5
   clip_upper: null
   # Do we collapse barcodes with same variant?
   collapse_identical_variants: false  # {false, mean, median}
@@ -239,8 +239,8 @@ avg_func_effect_shifts_default: &avg_func_effect_shifts_default
   plot_kwargs:
     addtl_slider_stats:
       times_seen: 2
-    heatmap_max_at_least: 0.5
-    heatmap_min_at_least: -0.5
+    heatmap_max_at_least: 2
+    heatmap_min_at_least: -5
     init_floor_at_zero: false
     init_site_statistic: mean
     site_zoom_bar_color_col: region  # supplied in the `site_numbering_map`
