--- a/data/func_effects_config.yml
+++ b/data/func_effects_config.yml
@@ -26,7 +26,7 @@ global_epistasis_params: &global_epistasis_params
   #  - median_stop: median func score of all variants with stop codons
   #  - null: no clipping
   #  - a number: clip at this number
-  clip_lower: -5
+  clip_lower: median_stop
   clip_upper: null
   # Do we collapse barcodes with same variant?
   collapse_identical_variants: false  # {false, mean, median}
@@ -106,6 +106,7 @@ avg_func_effects_default: &avg_func_effects_default
       times_seen: 2
     heatmap_max_at_least: 2
     heatmap_min_at_least: -5
+    heatmap_min_fixed: -5
     init_floor_at_zero: false
     init_site_statistic: mean
     site_zoom_bar_color_col: region  # supplied in the `site_numbering_map`
@@ -173,7 +174,7 @@ func_effect_shifts_default: &func_effect_shifts_default
   #  - median_stop: median func score of all variants with stop codons
   #  - null: no clipping
   #  - a number: clip at this number
-  clip_lower: -5
+  clip_lower: median_stop
   clip_upper: null
   # Do we collapse barcodes with same variant?
   collapse_identical_variants: false  # {false, mean, median}
@@ -183,39 +184,6 @@ func_effect_shifts_default: &func_effect_shifts_default
   # values and then pick a best one at the averaging step. 
   lasso_shifts: [0.00001, 0.00005, 0.0001, 0.0002, 0.001]
 
-# func_effect_shifts:
-#  A-1-1:
-#   <<: *func_effect_shifts_default
-#   reference: TZM-bl
-#   conditions:
-#     TZM-bl: A-230622-TZM_bl-1-1
-#     An_An: A-230622-0_0-1-1
-#     An_HS: A-230622-An_HS-1-1
-#     HS_HS: A-230622-HS_HS-1-1
-#  A-2-1:
-#   <<: *func_effect_shifts_default
-#   reference: TZM-bl
-#   conditions:
-#     TZM-bl: A-230622-TZM_bl-2-1
-#     An_An: A-230622-0_0-2-1
-#     An_HS: A-230622-An_HS-2-1
-#     HS_HS: A-230622-HS_HS-2-1
-#  B-1-1:
-#   <<: *func_effect_shifts_default
-#   reference: TZM-bl
-#   conditions:
-#     TZM-bl: B-230627-TZM_bl-1-1
-#     An_An: B-230627-0_0-1-1
-#     An_HS: B-230627-An_HS-1-1
-#     HS_HS: B-230627-HS_HS-1-1
-#  B-2-1:
-#   <<: *func_effect_shifts_default
-#   reference: TZM-bl
-#   conditions:
-#     TZM-bl: B-230627-TZM_bl-2-1
-#     An_An: B-230627-0_0-2-1
-#     An_HS: B-230627-An_HS-2-1
-#     HS_HS: B-230627-HS_HS-2-1
 
 # --------------------------------------------------------------------------------------
 # Configuration for averaging func effect shifts from multiple comparisons.
