--- a/data/dms_viz_config.yml
+++ b/data/dms_viz_config.yml
@@ -19,3 +19,23 @@ prefusion_cell_entry:
   heatmap-limits: [-5, 0, 2]
   title: Effects of mutations to rabies G on cell entry
   description: null
+
+prefusion_ab_escape:
+  pdb_id: 7u9g
+  escape_or_phenotype: escape  # are we showing escape or some other phenotype?
+  phenotypes: null  # list of phenotypes if showing those
+  antibodies: null  # list of antibodies if showing escape, if null then show all
+  # the following arguments are optional, and have the same
+  # meaning as to `configure-dms-viz`
+  # (https://dms-viz.github.io/dms-viz-docs/preparing-data/command-line-api/)
+  included-chains: [A, B, C]
+  excluded-chains: [D, E, F, G, H, I]
+  alphabet: RKHDEQNSTYWFAILMVGPC
+  floor: true
+  summary-stat: sum
+  tooltip-cols: {cell entry: cell entry}
+  filter-cols: {cell entry: cell entry}
+  filter-limits: {cell entry: [-8, -5, 0]}
+  heatmap-limits: [0]
+  title: Effects of mutations to rabies G on escape from monoclonal antibodies
+  description: null
