track `dms-viz` JSONs and add to docs

--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,6 @@ results/filtered_antibody_escape_CSVs/*
 results/filtered_func_effects_CSV/*
 !results/filtered_func_effects_CSV/*.csv
 
-!results/dms_viz
-results/dms_viz/*
-!results/dms_viz/*.json
+!results/dms-viz
+results/dms-viz/*
+!results/dms-viz/*.json
