add citation and clean up README (#74)
* add citation and clean up README

* re-run pipeline

--- a/config.yaml
+++ b/config.yaml
@@ -29,7 +29,14 @@ github_blob_url: https://github.com/dms-vep/RABV_Pasteur_G_DMS/blob/main
 # Some descriptions and metadata about the analysis.
 description: Deep mutational scanning of rabies G (Pasteur strain)
 year: 2024
-authors: Arjun Aditham, Caelan Radford, Caleb Carr, and Jesse Bloom
+authors: "[Aditham et al](https://www.biorxiv.org/content/10.1101/2024.12.17.628970v1)"
+
+# ----------------------------------------------------------------------------
+# Set the `use_precomputed_barcode_counts` option to `true` if you want to
+# re-run this pipeline from the barcode counts already calculated from the
+# FASTQs rather than re-running the barcode counting.
+# ----------------------------------------------------------------------------
+use_precomputed_barcode_counts: false
 
 # ----------------------------------------------------------------------------
 # Site numbering, mutation classification, and neut standards
